--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip3 install -r requirements.txt
+        pip3 install pylint
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
