--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip3 install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint --exit-zero $(git ls-files '*.py')
+        pylint --exit-zero --fail-under=5 $(git ls-files '*.py')
