--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   docker:
     name: Docker
-    runs-on: python:3.9-slim
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
