--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'ben'
   pull_request:
 
 env:
@@ -18,15 +19,12 @@ jobs:
 
       # Only build and push docker image if this action is triggered from the main branch.
       - name: Build Docker image
-        if: ${{ github.ref == 'refs/heads/main' }}
         run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
 
       - name: Log in to Github Package registry
-        if: ${{ github.ref == 'refs/heads/main' }}
         run: echo "${{ secrets.GITHUB_TOKEN}}" | docker login ghcr.io -u $ --password-stdin
 
       - name: Push image to registry
-        if: ${{ github.ref == 'refs/heads/main' }}
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
 
